[package]
name = "actix-multipart-demo"
version = "0.1.0"
authors = ["Aditya Kresna <aditya.kresna@outlook.co.id>"]
edition = "2018"

[dependencies]
actix-multipart = "0.3.0"
actix-web = "3.3.2"
dotenv = "0.15.0"
env_logger = "0.8.2"
futures = "0.3.9"
log = "0.4.11"
mime = "0.3.16"
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.61"
